[package]
name = "easy-test-google-apis-rs"
version = "0.1.0"
authors = ["Donovan Preston <donovanpreston@gmail.com>"]
edition = "2018"

[dependencies]
diesel = { version = "1.4.2", features = ["mysql", "r2d2"] }
google-spanner1 = "*"
# This project intentionally uses an old version of Hyper. See
# https://github.com/Byron/google-apis-rs/issues/173 for more
# information.
hyper = "^0.10"
hyper-rustls = "^0.6"
serde = "^1.0"
serde_json = "^1.0"
yup-oauth2 = "^1.0"
tokio-threadpool = "0.1.14"
futures = "0.1"

